@@ -69,9 +69,11 @@ proc ::tkdnd::text::drag_source { mode path { types DND_Text } { event 1 } { tag
       $path tag bind $tag <ButtonPress-${event}> \
         "tkdnd::text::_begin_drag press ${event} %W %s %X %Y %x %y"
       ## Set a binding to the widget, to put selection as data...
-      bind $path <<DragInitCmd>> "::tkdnd::text::DragInitCmd $path {%t} $tag"
+      bind $path <<DragInitCmd>> \
+        [list ::tkdnd::text::DragInitCmd $path %t $tag]
       ## Set a binding to the widget, to remove selection if action is move...
-      bind $path <<DragEndCmd>> "::tkdnd::text::DragEndCmd $path %A $tag"
+      bind $path <<DragEndCmd>> \
+        [list ::tkdnd::text::DragEndCmd $path %A $tag]
     }
     unregister {
       $path tag bind $tag <ButtonPress-${event}> {}
@@ -88,8 +90,10 @@ proc ::tkdnd::text::drag_source { mode path { types DND_Text } { event 1 } { tag
 proc ::tkdnd::text::drop_target { mode path { types DND_Text } } {
   switch -exact -- $mode {
     register {
-      bind $path <<DropPosition>>   "::tkdnd::text::DropPosition $path %X %Y %A %a %m"
-      bind $path <<Drop>>           "::tkdnd::text::Drop $path %D %X %Y %A %a %m"
+      bind $path <<DropPosition>> \
+        [list ::tkdnd::text::DropPosition $path %X %Y %A %a %m]
+      bind $path <<Drop>> \
+        [list ::tkdnd::text::Drop $path %D %X %Y %A %a %m]
     }
     unregister {
       bind $path <<DropEnter>>      {}
